--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,13 @@
     ],
     "require": {
         "php": "^8.0",
-        "illuminate/support": "^8.0|^9.0",
+        "illuminate/support": "^8.0|^9.0|^10.0",
         "laravel/octane": "^1.2"
     },
     "require-dev": {
         "gtjamesa/php-standards": "^2.0",
         "friendsofphp/php-cs-fixer": "^3.6",
-        "orchestra/testbench": "^6.0|^7.0",
+        "orchestra/testbench": "^6.0|^7.0|^8.0",
         "phpunit/phpunit": "^9.0"
     },
     "autoload": {
